Style: fix z-index

--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,5 +1,6 @@
 .menu-container {
     position: fixed;
+    z-index: 999;
 }
 
 .hamburger {
@@ -14,6 +15,7 @@
     width: 100%;
     justify-content: center;
     align-items: center;
+    z-index: 900;
 }
 
 .menu-close > a, .menu-open > a {
@@ -32,7 +34,6 @@
     position: fixed;
     max-width: 20rem;
     height: 100vh;
-    z-index: 990;
     transform: translateX(0);
     transition: transform 0.2s ease-in-out;
     background-color: rgba(0, 0, 0, 0.8);
